# parallel-programming

./: .gitignore  README.md
additional-tasks/client-srver/: client  client.cpp  server  server.cpp
additional-tasks/communicator/: README.md  exclude-communicator.cpp
additional-tasks/mpi-files/: mpi-files.cpp  output.txt
additional-tasks/mpi-send/: mpi-send.cpp
communicator-task/: README.md
intro-tasks/: sum.cpp
intro-tasks/1-hello/: hello.cpp
intro-tasks/mpi/: circular-forwarding.cpp  hello.cpp  send-time.cpp  sum.cpp
intro-tasks/open-mp/: CMakeLists.txt  hello.cpp  shared.cpp  sum.cpp
intro-tasks/threads/: CMakeLists.txt  hello.cpp  shared.cpp  sum.cpp
intro-tasks/threads-intro/: CMakeLists.txt  hello.cpp  sum.cpp
labs/diffusion-equation/: CMakeLists.txt  acceleration.py  complexity.py  paint_solution.py  par.cpp  parc.cpp  seq.cpp
labs/diffusion-equation/include/: diff-equation.h  diff-equation.hpp  diff-scheme.h
labs/effective-loop-parallelization/ideal/mpi/: CMakeLists.txt  acceleration.py  parallel.c  sequential.c
labs/effective-loop-parallelization/ideal/openmp/: parallel.cpp  sequential.cpp
labs/effective-loop-parallelization/task1/: CMakeLists.txt  acceleration.py  parallel.c  sequential.c
labs/effective-loop-parallelization/task2/: CMakeLists.txt  acceleration.py  parallel.cpp  sequential.cpp
labs/effective-loop-parallelization/task3/: acceleration.py  parallel.cpp  sequential.cpp
labs/effective-loop-parallelization/tmp/: CMakeLists.txt  parallel.c  sequential.c
labs/lab2/: Makefile  common.hpp  main.cpp  math.cpp  plot.py
mpi-send-task/: mpi-send.cpp
